# Homegear-BaseLib-UnitTests

./: .gitignore  .project  CMakeLists.txt  LICENSE  configure.ac  makeRelease.sh
data/: flows.json
src/: BitReaderWriter.cpp  BitReaderWriter.h  HelperFunctions.cpp  HelperFunctions.h  Http.cpp  Http.h  Json.cpp  Json.h  Makefile.am  Math.cpp  Math.h  WebSocket.cpp  WebSocket.h  homegear-baselib-unittests  libhomegear-base-unittests  main.cpp
